--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -3,20 +3,23 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    background: #03001C;
+    /* background: #03001C; */
+    background: linear-gradient(220.55deg, #C5EDF5 0%, #4A879A 100%);
+
 }
 
 .about-container {
     width: 70%;
-    outline: 3px solid #fff;
+    outline: 3px solid #000;
     margin-top: 5rem;
     padding: 1.5rem;
     border-radius: 1rem;
-    color: #fff;
+    color: #000;
 }
 
 .title-about {
-    color: #3DADF2;;
+    /* color: #3DADF2; */
+    color: #1877F2;
     text-align: center;
     font-size: 1.9rem;
     margin: 3px;
@@ -25,6 +28,7 @@
 
 .description-about {
     text-indent: 10px;
+    /* text-align: justify;  */
 }
 
 .description-about p{
