--- a/client/src/components/Detail/Detail.css
+++ b/client/src/components/Detail/Detail.css
@@ -115,7 +115,7 @@ iframe{
 .div-video{
     display: flex;
     flex-direction: column;
-    
+    position: relative;
 }
 
 .div-video h3{
@@ -126,35 +126,26 @@ iframe{
     /* outline: 3px solid red; */
 }
 
-.cargando{
-    margin-left: 200px;
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin-left: 200px;
 }
 
-@media (max-width: 1200px) {
-
-    .div-detail {
-      width: 90%;
-      gap: 1.5rem;
-    }
-
-    iframe{
-        max-width: 400px;
-    }
-
-    .div-video h3{
-        font-size: 17px;
-    }
-
-    .contenido p{
-        padding-right: 10px;
-        font-size: 15px;
-    }
-
-    .cargando {
-        margin-left: 150px;
-        text-align: center;
-      }
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
   }
+  100% {
+      transform: rotate(360deg);
+  }
+} 
   
   /* Para pantallas menores a 800px */
   @media (max-width: 800px) {
@@ -195,8 +186,9 @@ iframe{
         margin-left: 1.5rem;
     }
 
-    .cargando {
-        margin-left: 0px;
+    .loader {
+        margin: 200px 0;
+        outline: 3;
         text-align: center;
     }
    
