--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0,0,0,0.9);
+  background: transparent;
   display: none;
   justify-content: center;
   align-items: center;
@@ -167,7 +167,7 @@
   }
 
   .icon-nav{ 
-    left: 3rem;
+    /* left: 4rem; */
 }
 }
 
